--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  camera: ^0.10.5+5
+  # pytorch_mobile: ^0.2.2
+  # pytorch_lite: ^2.0.5
+  # flutter_pytorch: ^1.0.1
+  path_provider: ^2.1.3
+  image: ^3.3.0
+  flutter_speed_dial: ^7.0.0
+  camera: ^0.11.0+1
   flutter_svg: ^2.0.7
   image_picker: ^1.0.4
   permission_handler: ^11.0.1
@@ -53,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -71,6 +77,9 @@ flutter:
     - assets/photo.png
     - assets/gallery.png
     - assets/bg.jpg
+    - assets/MARIE7000IR9.onnx
+    - assets/MARIE7000.pt
+    - assets/labels.txt
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
